syntax = "proto3";

package russervice;

option go_package = "./proto/";

import "google/api/annotations.proto";

service RusProfileService {
  rpc GetInfo(GetInfoRequest) returns (InfoResponse) {
    option (google.api.http) = {
      get: "/get/{inn}"
    };
  }
}

message GetInfoRequest {
  string inn = 1;
}

message InfoResponse {
  string inn = 1;
  string kpp = 2;
  string name = 3;
  string ceo_name = 4;
}